--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "history": "5.0.0",
+    "namor": "^2.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-loading-dot": "^1.0.6",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-table": "^7.6.3",
     "typescript": "^4.1.3",
     "web-vitals": "^1.1.0"
   },
